--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 15px;
+  padding: 1rem;
   background-color: var(--Yellow);
 }
 
@@ -12,13 +12,13 @@ body {
   flex-direction: column;
   max-width: 385px;
   min-height: 90%;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   border: 1px solid black;
-  border-radius: 20px;
-  gap: 24px;
-  padding: 24px;
+  border-radius: 1.25rem;
+  gap: 1.5rem;
+  padding: 1.5rem;
   background-color: var(--White);
-  box-shadow: 8px 8px 0px #000000;
+  box-shadow: .5rem .5rem 0 black;
 }
 
 .card__content {
